cmake_minimum_required(VERSION 3.20)
project(autocar)
aux_source_directory(. SRC_DIRS)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_STANDARD 23)
find_package(OpenCV 4.8.0 REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
message("SRC_DIRS=${SRC_DIRS}")
message("opencv_dirs=${OpenCV_INCLUDE_DIRS}")
message("OpenCV_libs=${OpenCV_LIBS}")
message("OpenCV_VERSION=${OpenCV_VERSION}")
add_executable(opencv ${SRC_DIRS})
target_link_libraries(opencv ${OpenCV_LIBS})
